--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,8 +74,8 @@ nav:
   - Home: index.md
   - Case Studies:
       - 🔍 About: case-studies/index.md
-      - 🧪 OpenTable Review Redesign: case-studies/opentable-review-systems.md
-      - 🚢 Stripe Instant Payout: case-studies/stripe-instant-payout.md
+      - 🧪 OpenTable Review Redesign: case-studies/opentable.md
+      - 🚢 Stripe Instant Payout: case-studies/stripe.md
 
 plugins:
   - tags:
